--- a/src/routes/Posting/PostingPresenter.css
+++ b/src/routes/Posting/PostingPresenter.css
@@ -1,7 +1,8 @@
 .ck.ck-editor__editable:not(.ck-editor__nested-editable) {
-    min-height: 500px;
+    padding:15px;
+    min-height: 600px;
 }
-
+/* 
 .ck.ck-editor__main:not(.ck-editor__nested-editable) {
     min-height: 500px;
-}
+} */
